[package]
name = "arts-scanner"
version = "0.1.0"
edition = "2021"
description = "Miracle Art possibility scanner"
authors = ["Ben Buckley <ben.buckley@outlook.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.2", features = ["derive"] }
itertools = "0.11.0"
